// Vitest Snapshot v1, https://bun:test.dev/guide/snapshot.html

exports[`solve ApImplicit -- PatternVar v.s. String 1`] = `
"{
  id: ?id,
  x: "abc",
  A: String
}"
`;

exports[`solve ApImplicit -- deepWalk -- inserted 1`] = `
"{
  id: ?id,
  x: "abc",
  c: ?id(implicit String, "abc")
}"
`;

exports[`solve ApImplicit -- deepWalk 1`] = `
"{
  id: ?id,
  A: String,
  idA: ?id(implicit String)
}"
`;

exports[`solve ApImplicit -- insertion 1`] = `
"{
  id: ?id,
  x: "abc"
}"
`;

exports[`solve ApImplicit -- same PatternVar 1`] = `
"{
  id: ?id,
  x: ?x
}"
`;
